<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iDog</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="about_us">我们只专注宠物狗\n因为爱</string>
    <string name="know_pet">这里有宠物狗的所有知识</string>
    <string name="boon">boon</string>
    <string name="start">Start!</string>
    <string name="launch">launch</string>
    <string name="all_about_pet">这是宠物狗的世界</string>
    <string name="dog">dog</string>
    <string name="next">next</string>
    <string name="idog">iDog</string>
    <string name="attention_dog_only">关注宠物狗的世界</string>
    <string name="dog_icon">dog_icon</string>
    <string name="wait_for_adopt">这里有等待领养的流浪狗</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="left_drawer_item_baike">宠狗百科</string>
    <string name="left_drawer_item_favorite">收藏</string>
    <string name="left_drawer_item_lostdog">流浪狗</string>
    <string name="about_app">关于iDog</string>
    <string name="search">搜索</string>
    <string name="loading">loading</string>
    <string name="body_type">体型分类</string>
    <string name="function">功能分类</string>
    <string name="must_choose_one">亲必须选择某一种分类哦！</string>
    <string name="wiki">百度百科</string>
    <string name="search_hint">输入想要知道的宠狗名字吧~</string>
    <string name="line">分割线</string>
    <string name="programming">开发中...</string>
    <string name="idog_about">一款介绍狗狗的软件，希望可以帮助到你\n目前搜集了符合美国AKC标准的178个品种\n后续会添加更多以及更新一些必要的功能\n如果你觉得我的应用有些帮助的话\n欢迎给出你宝贵的建议哈~\n应用在使用过程中发生任何问题\n欢迎Email联系我：qi12371@gmail.com</string>
    <string name="advertisement">推荐应用</string>

    <!-- umeng Strings -->
    <string name="umeng_example_home_btn_analytics">Analytics</string>
    <string name="umeng_example_home_btn_xp">XP</string>
    <string name="umeng_example_home_btn_ad">Ads</string>
    <string name="umeng_example_home_btn_tools">Tools</string>
    <string name="umeng_example_home_btn_fb">Feedback</string>
    <string name="umeng_example_home_btn_update">Update</string>
    <string name="umeng_example_home_btn_plus">Socialize</string>
    <string name="umeng_example_home_btn_xp_ufp">Umeng For Publisher</string>
    <string name="umeng_example_xp_home_btn_container">Container</string>
    <string name="umeng_example_xp_home_btn_banner">Banner</string>
    <string name="umeng_example_xp_home_btn_banner_ufp">"Banner\n(UFP)"</string>
    <string name="umeng_example_xp_home_btn_handler">Handler</string>
    <string name="umeng_example_xp_home_btn_handler_ufp">"Handler\n(UFP)"</string>
    <string name="umeng_example_xp_home_btn_tab">Multi-Pages</string>
    <string name="umeng_example_xp_home_btn_wap">WebView</string>
    <string name="umeng_example_xp_home_btn_custom">Custom</string>
    <string name="umeng_example_xp_home_btn_wap_ufp">"WebView\n(UFP)"</string>
    <string name="umeng_example_xp_home_btn_push_header">Push AD\n(UFP)</string>
    <string name="umeng_example_xp_home_btn_textlink">Text Link</string>
    <string name="umeng_example_xp_home_btn_container_header">LargeImage</string>
    <string name="umeng_example_xp_home_handler_icons">Icons \n(UFP)</string>
    <string name="umeng_example_fb_home_btn_simple">Simple Demo</string>
    <string name="actionbar_activity_not_found">Failed to open intent&#8230;</string>
    <string name="umeng_example_home_hint_wait">Coming soooooon</string>
    <string name="intro"> The webview before show js call Umeng Analytics APIs</string>

</resources>