<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.jackyonline.idog.MainActivity" >

    <item
        android:id="@+id/item_about_app"
        android:orderInCategory="2"
        android:title="@string/about_app"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/item_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="1"
        android:title="@string/search"
        android:visible="false"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>

    <group
        android:checkableBehavior="single"
        android:orderInCategory="1" >
        <item
            android:id="@+id/item_body_type"
            android:title="@string/body_type"
            android:visible="false"/>
        <item
            android:id="@+id/item_function"
            android:title="@string/function"
            android:visible="false"/>
    </group>

</menu>