<?xml version="1.0" encoding="utf-8"?>
<org.jackyonline.idog.customui.DiscrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:discrollve="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbars="none" >

    <org.jackyonline.idog.customui.DiscrollViewContent
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#99CC33"
            android:fontFamily="serif"
            android:gravity="center"
            android:padding="25dp"
            android:text="@string/about_us"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#CCFFFF"
            android:fontFamily="serif"
            android:gravity="center"
            android:padding="25dp"
            android:text="@string/wait_for_adopt"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/dog"
            android:scaleType="centerInside"
            android:src="@drawable/dog"
            discrollve:discrollve_alpha="true"
            discrollve:discrollve_scaleX="true"
            discrollve:discrollve_scaleY="true"
            discrollve:discrollve_translation="fromTop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/comm_3"
            android:gravity="center"
            discrollve:discrollve_alpha="true"
            discrollve:discrollve_threshold="0.3" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/know_pet"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/boon"
            android:src="@drawable/boon"
            discrollve:discrollve_alpha="true"
            discrollve:discrollve_translation="fromLeft|fromBottom" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/comm_2"
            android:gravity="center"
            discrollve:discrollve_alpha="true"
            discrollve:discrollve_threshold="0.3" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="GoDogWorld"
                android:clickable="true"
                android:text="@string/start"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/launch"
            android:src="@drawable/launch"
            discrollve:discrollve_translation="fromRight" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/comm_1"
            android:fontFamily="serif"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/all_about_pet"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            discrollve:discrollve_alpha="true"
            discrollve:discrollve_translation="fromBottom" />
    </org.jackyonline.idog.customui.DiscrollViewContent>

</org.jackyonline.idog.customui.DiscrollView>