<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- The main content view -->

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- The navigation drawer -->

    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/left_drawer_item_bg_normal"
        android:clickable="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="iDog"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>

        <ImageView style="@style/left_drawer_item_line" />

        <RelativeLayout
            android:id="@+id/rl_baike"
            style="@style/left_drawer_item_layout" >

            <TextView
                style="@style/left_drawer_item_text"
                android:drawableLeft="@drawable/ic_drawer_favorite"
                android:text="@string/left_drawer_item_baike" />
        </RelativeLayout>

        <ImageView style="@style/left_drawer_item_line" />
        
         <RelativeLayout
            android:id="@+id/rl_advertisement"
            style="@style/left_drawer_item_layout" >

            <TextView
                style="@style/left_drawer_item_text"
                android:drawableLeft="@drawable/ic_drawer_favorite"
                android:text="@string/advertisement" />
        </RelativeLayout>

        <ImageView style="@style/left_drawer_item_line" />

        <RelativeLayout
            android:id="@+id/rl_loading"
            style="@style/left_drawer_item_layout" >

            <TextView
                style="@style/left_drawer_item_text"
                android:drawableLeft="@drawable/ic_drawer_favorite"
                android:text="@string/programming" />
        </RelativeLayout>

        <ImageView style="@style/left_drawer_item_line" />

        <RelativeLayout
            android:id="@+id/favorite_btn"
            style="@style/left_drawer_item_layout"
            android:visibility="invisible" >

            <TextView
                style="@style/left_drawer_item_text"
                android:drawableLeft="@drawable/ic_drawer_favorite"
                android:text="@string/left_drawer_item_favorite" />
        </RelativeLayout>

        <ImageView
            style="@style/left_drawer_item_line"
            android:visibility="invisible" />
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>